test/Harper/Tests/Good/issue001_mod.har
f :: Integer -> Integer;
f n = 2 * n;

main :: Bool;
main = f 5 mod 3 == 1 and f 5 mod 3 != 2 and f 5 mod 3 > 0 and f 5 mod 3 >= 1;