test/Harper/Tests/Bad/ModuloZero.har
main :: Integer;
main = f 0;

f :: Integer -> Integer;
f n = 42 mod n;